repo-homework: add delete and save message tests