@@ -36,5 +36,8 @@ dependencies {
 }
 
 tasks.test {
+  jvmArgs = listOf(
+    "--add-opens=java.base/java.time=ALL-UNNAMED"
+  )
   useJUnitPlatform()
 }
